# var_quantity

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/unary/: exponential.rs  first_order_taylor.rs  linear.rs  mod.rs  polynomial.rs
tests/: serde.rs  unary_functions.rs  var_quantity_custom_impl.rs
